mainly cosmetic things
Like i said it's mainly cosmetic changes for WSI, but there are some content changes. For example i made it so the life in the new world decisions work for all new world nations now, or fixing some colonial provinces and such.

--- a/1700test/localisation/0_PYMND.csv
+++ b/1700test/localisation/0_PYMND.csv
@@ -4,3 +4,9 @@ persian_brotherhood_Georgia_sweet_georgia_title;Persian Brotherhood;;;;;;;;;;;;;
 persian_brotherhood_Georgia_sweet_georgia_desc;Jesse, we need to form a brotherhood with the persians, JESSE, we need to fraternize;;;;;;;;;;;;;
 french_fraternity_oroaorahahahdsijs_title;Liberty, equality, fraternity;;;;;;;;;;;;;
 french_fraternity_oroaorahahahdsijs_desc;Our french roots run deep. The idea of a united french idenity is spreading, and soon all french men will join hand in hand.;;;;;;;;;;;;;
+MRZ_reactionary;Nationale Katholieke Partij;;;;;;;;;;;;;
+MRZ_liberal;The Paradijselijk Partij;;;;;;;;;;;;;
+MRZ_socialist;Remarizian Partij;;;;;;;;;;;;;
+MRZ_conservative;Buffett Partij;;;;;;;;;;;;;
+MRZ_communist;Verenigde West-Indische Communistische Partij;;;;;;;;;;;;;
+MRZ_fascist;Nederlandse Nationale Partij;;;;;;;;;;;;;
