--- a/1700test/localisation/00_HPM_decisions.csv
+++ b/1700test/localisation/00_HPM_decisions.csv
@@ -1400,6 +1400,8 @@ end_of_transcaucasia_AZB_title;The End of Transcaucasia;;;;;;;;;;;;;
 end_of_transcaucasia_AZB_desc;The Transcaucasian union has been sundered. It is time to bring it to an end.;;;;;;;;;;;;;
 end_of_transcaucasia_ARM_title;The End of Transcaucasia;;;;;;;;;;;;;
 end_of_transcaucasia_ARM_desc;The Transcaucasian union has been sundered. It is time to bring it to an end.;;;;;;;;;;;;;
+persian_brotherhood_transcaucasia_sweet_transcaucasia_title;Persian Brotherhood;;;;;;;;;;;;;
+persian_brotherhood_transcaucasia_sweet_transcaucasia_desc;Ok mr marizian, time to make opium, like a boss;;;;;;;;;;;;;
 become_uzbekistan_khiva_title;Become Uzbekistan;;;;;;;;;;;;;
 become_uzbekistan_khiva_desc;We must unite the Uzbeks into a single state, with sovereignty over all our ancestral land. Under Uzbek leadership, all of Turkestan will one day be united!;;;;;;;;;;;;;
 become_uzbekistan_bukkhara_title;Become Uzbekistan;;;;;;;;;;;;;
